# fastapi-file-upload

./: .gitignore  MEMORY_TRACKING.md  README.md  SSE_UPLOAD_FLOW.md
client/: README.md  index.html  package.json
server/: .env.example  .gitignore  PACKAGE_MANAGEMENT.md  add_package.sh  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run.sh
server/app/: __init__.py  __main__.py  main.py  schemas.py
server/app/configs/: __init__.py  app_config.py
server/app/database/: __init__.py  connection.py
server/app/logger/: __init__.py  logger.py
server/app/models/: __init__.py  file_model.py
server/app/repository/: __init__.py  file.py
server/app/routers/: __init__.py  file.py  file_upload.py
testsprite_tests/: TC001_CSV_File_Upload_Success_with_Drag_and_Drop.py  TC002_CSV_File_Upload_Success_with_Click_to_Select.py  TC003_CSV_File_Upload_Validation___Reject_Non_CSV_File.py  TC004_CSV_File_Upload_Validation___Reject_File_Exceeding_Size_Limit.py  TC005_File_List_Pagination_and_Search_Functionality.py  TC006_File_Details_Modal_Displays_Complete_Metadata_and_Analysis.py  TC007_CSV_Analysis_Report_Identifies_Nulls_and_Duplicates_Accurately.py  TC008_File_Deletion_with_Confirmation_Removes_File_and_Metadata.py  TC009_File_Deletion_Cancel_Does_Not_Remove_File.py  TC010_Real_Time_Progress_Updates_During_Upload_and_Analysis_via_SSE.py  TC011_Backend_API_Endpoints_Return_Expected_Status_Codes_and_Responses.py  TC012_Data_Integrity_on_Upload___Ensure_UUID_Naming_and_Metadata_Accuracy.py  TC013_Logging_Captures_Key_Events_and_Errors.py  standard_prd.json  (+6 more)
(+22 files in other folders)
